crates/toml_edit/tests/fixtures/invalid/key-open-bracket.stderr
TOML parse error at line 1, column 6
  |
1 | [abc = 1
  |      ^
Unexpected `=`
Expected `.` or `]`
While parsing a Table Header
